--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <i class="fab fa-github"></i>
             <h3 class="p-skill__container--list-ttl">git</h3>
             <p class="p-skill__container--list-txt">
-              sourcetree及びgithubを使用
+              sourcetree及びgithubを使用<br>
             </p>
           </li>
         </ul>
